fix: on received message .reactions-menu completely visible

--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -234,6 +234,11 @@
   border-radius: 1rem;
 }
 
+.received .reactions-menu {
+  right: auto;
+  transform: translate(-50%, -80%);
+}
+
 .reactions-menu svg {
   height: 1.3rem;
   width: 1.3rem;
